--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,4 +1,4 @@
-name: Development Feature Flags Documentation
+name: Update Feature Flags Documentation
 
 on:
   schedule:
@@ -211,143 +211,41 @@ jobs:
           if [ -n "$latest_branch" ] && [ -s latest_release_flags.txt ] && [ -s main_flags.txt ]; then
             echo "## Comparison Between Latest Release and Main Branch" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-            # Initialize associative arrays for release and main flags
-          declare -A release_flags main_flags
-          
-          # Populate arrays with release branch flags
-          while IFS='=' read -r key value; do
-            release_flags["$key"]="$value"
-          done < release_flags.txt
-
-          # Populate arrays with main branch flags
-          while IFS='=' read -r key value; do
-            main_flags["$key"]="$value"
-          done < main_flags.txt
-
-          # Begin Markdown content
-          echo "# Feature Flags Documentation" > ${{ env.FEATURE_FLAGS_DOC }}
-          echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-          release_branch="${{ steps.get-latest-release.outputs.branch }}"
-          if [ -n "$release_branch" ]; then
-            echo "## Current Release Branch Feature Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Count | Key              | Value                       |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-------|------------------|-----------------------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-            count=1
-            for key in "${!release_flags[@]}"; do
-              echo "| $count | $key | \`${release_flags[$key]}\` |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              ((count++))
+            # New Flags
+            echo "### New Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Key              | Release Value ($latest_branch) | Main Value      | Status     |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|------------------|-------------------------------|-----------------|------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            for key in "${!latest_release_flags[@]}"; do
+              if [[ -z "${main_flags[$key]}" ]]; then
+                echo "| $key | \`${latest_release_flags[$key]}\` | N/A | **New 🔵** |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              fi
             done
 
-            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "> **Comparison between \`main\` and \`$release_branch\`**" >> ${{ env.FEATURE_FLAGS_DOC }}
-            release_column="Release Value (\`$release_branch\`)"
-          else
-            echo "> **No release branch found; only main branch feature flags are displayed.**" >> ${{ env.FEATURE_FLAGS_DOC }}
-            release_column="Release Value (latest release)"
-          fi
-          echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-          # Separate sections for New, Updated, Deleted flags
-          echo "## Summary of Changes" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-          # Track changes in New, Updated, Deleted arrays
-          new_changes=()
-          updated_changes=()
-          deleted_changes=()
-
-          # Process keys in release_flags first
-          for key in "${!release_flags[@]}"; do
-            release_value="${release_flags[$key]}"
-            main_value="${main_flags[$key]:-N/A}"
-
-            if [[ "$main_value" == "N/A" ]]; then
-              # Key exists in release_flags but not in main_flags, so it's deleted
-              deleted_changes+=("| $key | \`$release_value\` | N/A | **Deleted 🔴** |")
-            elif [[ "$release_value" != "$main_value" ]]; then
-              # Key exists in both but values are different, so it's updated
-              updated_changes+=("| $key | \`$release_value\` | \`$main_value\` | **Updated 🟡** |")
-            fi
-          done
-
-          # Process remaining keys in main_flags that weren't in release_flags
-          for key in "${!main_flags[@]}"; do
-            if [[ -z "${release_flags[$key]}" ]]; then
-              main_value="${main_flags[$key]}"
-              # Key is new in main_flags, so it's added as New
-              new_changes+=("| $key | N/A | \`$main_value\` | **New 🔵** |")
-            fi
-          done
-
-          # Output Summary of Changes
-          if [ ${#new_changes[@]} -gt 0 ]; then
-            echo "### New Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-            printf "%s\n" "${new_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-          fi
-
-          if [ ${#updated_changes[@]} -gt 0 ]; then
+            # Updated Flags
             echo "### Updated Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-            printf "%s\n" "${updated_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-          fi
+            echo "| Key              | Release Value ($latest_branch) | Main Value      | Status     |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|------------------|-------------------------------|-----------------|------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            for key in "${!latest_release_flags[@]}"; do
+              if [[ -n "${main_flags[$key]}" && "${latest_release_flags[$key]}" != "${main_flags[$key]}" ]]; then
+                echo "| $key | \`${latest_release_flags[$key]}\` | \`${main_flags[$key]}\` | **Updated 🟡** |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              fi
+            done
 
-          if [ ${#deleted_changes[@]} -gt 0 ]; then
+            # Deleted Flags
             echo "### Deleted Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-            printf "%s\n" "${deleted_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Key              | Release Value ($latest_branch) | Main Value      | Status     |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|------------------|-------------------------------|-----------------|------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            for key in "${!main_flags[@]}"; do
+              if [[ -z "${latest_release_flags[$key]}" ]]; then
+                echo "| $key | N/A | \`${main_flags[$key]}\` | **Deleted 🔴** |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              fi
+            done
             echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
           fi
-
-          # Full Comparison Table
-          echo "## Full Feature Flags Comparison" >> ${{ env.FEATURE_FLAGS_DOC }}
-          echo "| Count | Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-          echo "|-------|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-          # Track processed keys to avoid duplicates in full table
-          declare -A seen_keys
-          count=1
-
-          # Full table with release_flags first
-          for key in "${!release_flags[@]}"; do
-            release_value="${release_flags[$key]}"
-            main_value="${main_flags[$key]:-N/A}"
-            status=""
-
-            if [[ "$main_value" == "N/A" ]]; then
-              status="Deleted 🔴"
-            elif [[ "$release_value" != "$main_value" ]]; then
-              status="Updated 🟡"
-            else
-              status="Unchanged ⚪"
-            fi
-
-            echo "| $count | $key | \`$release_value\` | \`$main_value\` | **$status** |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            seen_keys["$key"]=1
-            ((count++))
-          done
-
-          # Append remaining keys from main_flags
-          for key in "${!main_flags[@]}"; do
-            if [[ -z "${seen_keys[$key]}" ]]; then
-              release_value="N/A"
-              main_value="${main_flags[$key]}"
-              status="New 🔵"
-
-              echo "| $count | $key | \`$release_value\` | \`$main_value\` | **$status** |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              ((count++))
-            fi
-          done
 
           # Display the generated FEATURE_FLAGS.md for debugging
           echo "Generated FEATURE_FLAGS.md content:"
           cat ${{ env.FEATURE_FLAGS_DOC }}
-          
           
       - name: Cleanup Temporary Files
         run: |
