--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -256,12 +256,12 @@ jobs:
 
           # Compare latest release with main
           if [ -n "$latest_branch" ]; then
-            compare_flags latest_release_flags main_flags "$latest_branch" "main"
+            compare_flags main_flags latest_release_flags "main" "$latest_branch" 
           fi
 
           # Compare latest release with previous release if both are available
           if [ -n "$latest_branch" ] && [ -n "$previous_branch" ]; then
-            compare_flags latest_release_flags previous_release_flags "$latest_branch" "$previous_branch"
+            compare_flags previous_release_flags latest_release_flags  "$previous_branch" "$latest_branch" 
           fi
 
           echo "Generated FEATURE_FLAGS.md content:"
