--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -256,7 +256,7 @@ jobs:
 
           # Compare latest release with main
           if [ -n "$latest_branch" ]; then
-            compare_flags main_flags latest_release_flags "main" "$latest_branch" 
+            compare_flags  latest_release_flags main_flags "$latest_branch" "main"
           fi
 
           # Compare latest release with previous release if both are available
